changes in github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: build CLI
         shell: bash
-        run: ll
+        run: ls -al
      
       - name: build CLI
         run: pwd
